tests/fixtures/invalid/str_bitxor_set.py
# Cannot bitwise XOR Str and Set[int]
x: str = "hello" ^ {1, 2, 3}
